Added a css file for the footer and gave the footer text a margin so it has a bit of space to breath

--- a/src/css/Main.css
+++ b/src/css/Main.css
@@ -4,5 +4,5 @@ main {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  background-color: rgb(61, 61, 61);
+  background-color: #584d3d
 }
