--- a/src/css/App.css
+++ b/src/css/App.css
@@ -3,27 +3,14 @@
   background-color: #cbbf7a;
 }
 
-/* .App-header {
-  background-color: #cbbf7a;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-
-} */
-
 #form-row{
-  border: solid black 2px;
+  border: solid #584d3d 5px;
   justify-content: center;
 }
 
 #horn-form{
   width: fit-content;
   margin: 0.5em 0 1em 0;
-
 }
 
 #form-select{
